--- a/demanage/templates/base.html
+++ b/demanage/templates/base.html
@@ -67,6 +67,9 @@
                 {# URL provided by django-allauth/account/urls.py #}
                 <a class="nav-link" href="{% url 'account_logout' %}">{% translate "Sign Out" %}</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'organizations:list' %}">{% trans "Organizations" %}</a>
+              </li>
             {% else %}
               <li class="nav-item">
                 {# URL provided by django-allauth/account/urls.py #}
